--- a/Beep/Beep.vcxproj.filters
+++ b/Beep/Beep.vcxproj.filters
@@ -15,34 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="Beep.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="injector.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="util.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="execute-code.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="util.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="injector.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="execute-code.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="win_raii.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="nt.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
